<resources>

    <string name="app_name">My Application</string>
    <string name="play_services_error">The device is not supported</string>
    <string name="permission_granted">Permission granted</string>
    <string name="address_not_found">Address not found</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="permission_message">To fetch current location.This app needs your permission to enable location services.</string>
    <string name="permission">Permission</string>
    <string name="enable_loctaion">Enable location to use this app.</string>
    <string name="latitude">Current Latitude</string>
    <string name="longitude">Current Longitude</string>
    <string name="address">Current Address</string>
    <string name="addr">Address</string>
    <string name="enter_address">Please enter address</string>
    <string name="fetch_latitude">Latitude : </string>
    <string name="fetch_longitude">Longitude : </string>
    <string name="location">Location</string>
    <string name="places">Google Places</string>
    <string name="settings">Settings</string>
    <string name="set">Set</string>
    <string name="radius">Radius : </string>
    <string name="location_error">Unable to fetch location : </string>
    <string name="current_latitude_fetch">Current Latitude : Fetching...</string>
    <string name="current_longitude_fetch">Current Longitude : Fetching...</string>
    <string name="current_address_fetch">Current Address : Fetching...</string>
    <string name="fetch_location_from_address">Fetch Location From Address</string>
    <string name="fetch_location">Fetch Location</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter password</string>
    <string name="validate">Validate</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="enter_valid_password">Please enter valid password.\nPassword should be atleast 6 characters long</string>
    <string name="fetch_current_location">Fetch current location, address and location based on address entered</string>
    <string name="validate_email_password">Validate email and password</string>
    <string name="certificate_pinning">Certificate Pinning</string>
    <string name="google_maps_and_nearby_places">Google Maps \u0026 Nearby places</string>
    <string name="validatee">Validated</string>
    <string name="google_api_key">AIzaSyBprDg0bJT2eTPhiSw_5LwuMpId6A58Nys</string>
    <string name="network_error">No internet connection</string>
    <string name="no_result_found">No Result Found</string>
    <string name="login">Login</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="find_places_nearby">FIND PLACES NEARBY</string>
    <string name="km">KM</string>
    <string name="dummy_text">Lorem Ispum</string>
    <string name="place_name">Place Name</string>
    <string name="place_details">Place Details</string>
    <string name="place_address">Place Address</string>
    <string name="place_rating">Rating</string>
    <string name="place_reviews">Reviews</string>
    <string name="timings">Timings</string>
    <string name="enter_latitude">Latitude</string>
    <string name="enter_longitude">Longitude</string>
    <string name="fetch_entered_address">Fetch Address</string>
    <string name="fetch_address">Address : </string>
    <string name="invalid_input">Invalid input</string>
    <string name="select_option">Select Option</string>
    <string name="google_places">Google Places</string>
    <string name="custom_places">Custom Places</string>
    <string name="set_radius">Set Radius</string>
    <string name="in_km">(in km)</string>
    <!--Google Place Types-->
    <string name="airport">AIRPORT</string>
    <string name="atm">ATM</string>
    <string name="bank">BANK</string>
    <string name="bar">BAR</string>
    <string name="cafe">CAFE</string>
    <string name="doctor">DOCTOR</string>
    <string name="gym">GYM</string>
    <string name="hospital">HOSPITAL</string>
    <string name="laundry">LAUNDRY</string>
    <string name="library">LIBRARY</string>
    <string name="museum">MUSEUM</string>
    <string name="park">PARK</string>
    <string name="police">POLICE</string>
    <string name="school">SCHOOL</string>
    <string name="supermarket">SUPERMARKET</string>
    <string name="zoo">ZOO</string>
    <string name="mybranches">My BRANCHES</string>
    <string name="hdfcbank">HDFC BANK</string>
    <string name="hdfcatm">HDFC BANK ATM</string>
</resources>
