<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group
    android:checkableBehavior="single"
    >
  <item
      android:id="@+id/airport"
      android:title="@string/airport"
      ></item>
    <item
        android:id="@+id/atm"
        android:title="@string/atm"
        ></item>
    <item
        android:id="@+id/bank"
        android:title="@string/bank"
        ></item>
    <item
        android:id="@+id/bar"
        android:title="@string/bar"
        ></item>
    <item
        android:id="@+id/cafe"
        android:title="@string/cafe"
        ></item>
    <item
        android:id="@+id/doctor"
        android:title="@string/doctor"
        ></item>
    <item
        android:id="@+id/gym"
        android:title="@string/gym"
        ></item>
    <item
        android:id="@+id/hospital"
        android:title="@string/hospital"
        ></item>
    <item
        android:id="@+id/laundry"
        android:title="@string/laundry"
        ></item>
    <item
        android:id="@+id/library"
        android:title="@string/library"
        ></item>
    <item
        android:id="@+id/museum"
        android:title="@string/museum"
        ></item>
    <item
        android:id="@+id/park"
        android:title="@string/park"
        ></item>
    <item
        android:id="@+id/police"
        android:title="@string/police"
        ></item>
    <item
        android:id="@+id/school"
        android:title="@string/school"
        ></item>
    <item
        android:id="@+id/supermarket"
        android:title="@string/supermarket"
        ></item>
    <item
        android:id="@+id/zoo"
        android:title="@string/zoo"
        ></item>
</group>
</menu>