<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:theme="@style/ToolbarStyle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_10dp"
            >

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvCurrentLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/current_latitude_fetch"
                android:textSize="@dimen/dimen_16dp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvCurrentLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_longitude_fetch"
                android:textSize="@dimen/dimen_16dp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvCurrentAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_address_fetch"
                android:textSize="@dimen/dimen_16dp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnFetchLatLng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:text="@string/fetch_location_from_address"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/fetch_location_from_address"
                    android:enabled="false"
                    android:padding="@dimen/dimen_10dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimen_16dp" />


                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_10dp"
                    android:text="@string/fetch_latitude"
                    android:textSize="@dimen/dimen_16dp" />


                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_10dp"
                    android:text="@string/fetch_longitude"
                    android:textSize="@dimen/dimen_16dp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnFetchLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/fetch_location"
                    android:textColor="@color/white" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/enter_latitude"
                    android:maxLines="1"
                    android:padding="@dimen/dimen_10dp"
                    android:inputType="numberSigned|numberDecimal"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimen_16dp" />


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:inputType="numberSigned|numberDecimal"
                    android:hint="@string/enter_longitude"
                    android:maxLines="1"
                    android:padding="@dimen/dimen_10dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimen_16dp" />


                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_10dp"
                    android:text="@string/fetch_address"
                    android:textSize="@dimen/dimen_16dp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnFetchAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/fetch_entered_address"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
