<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    >

    <RelativeLayout
        android:id="@+id/rlPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@color/white"
        android:padding="@dimen/dimen_10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgPlace"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_100dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="@dimen/dimen_1dp" />

        <LinearLayout
            android:id="@+id/lvPlaceDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_toRightOf="@+id/imgPlace"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvPlaceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dimen_16dp" />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvPlaceAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_address"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dimen_16dp" />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvPlaceRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_rating"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dimen_16dp" />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvPlaceReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="@string/place_reviews"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dimen_16dp" />
        </LinearLayout>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvTimings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lvPlaceDetails"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:text="@string/timings"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dimen_16dp"
            />
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_100dp"
        android:background="@color/white"
        android:padding="@dimen/dimen_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ProgressBar>
</android.support.design.widget.CoordinatorLayout>