<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grainsboro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grainsboro"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbar_bg">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ToolbarStyle">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="@dimen/dimen_20dp"
                    android:gravity="center"
                    android:text="@string/place_details"
                    android:paddingRight="@dimen/dimen_20dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_18dp"
                    android:textStyle="bold" />
            </android.support.v7.widget.Toolbar>
        </FrameLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/imgPlace"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_200dp"
                    android:layout_below="@+id/toolBar"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:layout_marginTop="-30dp"
                    android:elevation="@dimen/dimen_4dp"
                    app:cardCornerRadius="@dimen/dimen_10dp"
                    app:cardElevation="@dimen/dimen_4dp"
                    app:contentPadding="@dimen/dimen_10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10dp"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/place_name"
                            android:textColor="@color/boulder"
                            android:textSize="@dimen/dimen_16dp"
                            android:textStyle="bold" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/txtPlaceName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dimen_20dp"
                            android:layout_marginTop="@dimen/dimen_5dp"
                            android:text="Zensar Technologies"
                            android:textColor="@color/gray_rgb135"
                            android:textSize="@dimen/dimen_16dp" />

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_10dp"
                            android:text="@string/place_address"
                            android:textColor="@color/boulder"
                            android:textSize="@dimen/dimen_16dp"
                            android:textStyle="bold" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/txtPlaceAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dimen_20dp"
                            android:layout_marginTop="@dimen/dimen_5dp"
                            android:text="Zensar Technologies"
                            android:textColor="@color/gray_rgb135"
                            android:textSize="@dimen/dimen_16dp" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/txtRating"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_10dp"
                            android:text="@string/place_rating"
                            android:textColor="@color/boulder"
                            android:textSize="@dimen/dimen_16dp"
                            android:textStyle="bold" />

                        <android.support.v7.widget.AppCompatRatingBar
                            android:id="@+id/rtPlace"
                            style="?android:attr/ratingBarStyleIndicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dimen_20dp"
                            android:layout_marginTop="@dimen/dimen_5dp"
                            android:numStars="5"
                            android:rating="1"
                            android:stepSize="0.1" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cvReviews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:contentPadding="@dimen/dimen_10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/place_reviews"
                            android:textColor="@color/azure_radiance"
                            android:textSize="@dimen/dimen_20dp"
                            android:textStyle="bold" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rvReviews"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_10dp">


                        </android.support.v7.widget.RecyclerView>
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/flOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_balck"
        android:visibility="gone"
        android:clickable="true">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"></ProgressBar>
    </FrameLayout>
</FrameLayout>