<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <FrameLayout
        android:id="@+id/flToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_bg">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ToolbarStyle">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:gravity="center"
                android:paddingRight="@dimen/dimen_20dp"
                android:text="@string/select_option"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_18dp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_below="@+id/flToolBar"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.v7.widget.CardView
                android:id="@+id/cvGooglePlaces"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:elevation="@dimen/dimen_5dp"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/dimen_10dp"
                app:cardElevation="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                app:contentPadding="@dimen/dimen_20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="@dimen/dimen_7dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_google_place_location" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:text="@string/google_places"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/boulder_rgb124" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvCustomPlaces"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:elevation="@dimen/dimen_4dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                app:cardCornerRadius="@dimen/dimen_10dp"
                android:background="@color/white"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                app:cardElevation="@dimen/dimen_10dp"
                app:contentPadding="@dimen/dimen_20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="48dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_custom_places_location" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:text="@string/custom_places"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/boulder_rgb124" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
